Fix card-header overlap on query builder
The titlebox-title card-header title for the "Current Search" card
on Search/Build.html on elevator-dark was overlapping the following
card-body.

--- a/share/static/css/elevator-dark/main.css
+++ b/share/static/css/elevator-dark/main.css
@@ -307,3 +307,7 @@
 .darkmode .messagebox-container.action-response textarea {
     color: #484e53 !important;
 }
+
+.darkmode .titlebox .card-header {
+    padding-bottom: inherit;
+}
